Add references for nuget package

--- a/docsrc/tools/templates/template.cshtml
+++ b/docsrc/tools/templates/template.cshtml
@@ -46,8 +46,12 @@
             <li><a href="@Root/license.html">License</a></li>
             <li><a href="@Root/release-notes.html">Release Notes</a></li>
             
-            <li class="nav-header">Getting started</li>
-            <li><a href="@Root/tutorial.html">Sample tutorial</a></li>
+            <li class="nav-header">Samples</li>
+            <li><a href="@Root/IrisClassification.html">Classification iris data</a></li>
+			<li><a href="@Root/IrisClustering.html">Clustering iris data</a></li>
+			<li><a href="@Root/SentimentAnalysis.html">Sentiment analysis</a></li>
+			<li><a href="@Root/SpamDetection.html">Spam detection</a></li>
+			
 
             <li class="nav-header">Documentation</li>
             <li><a href="@Root/reference/index.html">API Reference</a></li>
