--- a/docsrc/tools/templates/template.cshtml
+++ b/docsrc/tools/templates/template.cshtml
@@ -40,6 +40,7 @@
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">@Properties["project-name"]</li>
             <li><a href="@Root/index.html">Home page</a></li>
+			<li><a href="@Root/tutorial.html">Tuturial</a></li>
             <li class="divider"></li>
             <li><a href="@Properties["project-nuget"]">Get Library via NuGet</a></li>
             <li><a href="@Properties["project-github"]">Source Code on GitHub</a></li>
