--- a/docsrc/tools/templates/template.cshtml
+++ b/docsrc/tools/templates/template.cshtml
@@ -50,22 +50,22 @@
               <li class="nav-header">Samples</li>
               <li><a href="@Root/BinaryClass_SentimentAnalysis.html">Binary classification: sentiment analysis</a></li>
               <li><a href="@Root/BinaryClass_SpamDetection.html">Binary classification: spam detection</a></li>
-              <li><a href="@Root/BinaryClass_FraudDetection.html">Binary classification: fraud detection</a></li>
+              @*<li><a href="@Root/BinaryClass_FraudDetection.html">Binary classification: fraud detection</a></li>*@
 
-              <li><a href="@Root/MultiClass_Issues.html">Multi-class classification: issues</a></li>
+              @*<li><a href="@Root/MultiClass_Issues.html">Multi-class classification: issues</a></li>
               <li><a href="@Root/MultiClass_IrisFlowers.html">Multi-class classification: iris flowers</a></li>
               <li><a href="@Root/MultiClass_HeartDisease.html">Multi-class classification: heart disease</a></li>
-              <li><a href="@Root/MultiClass_MNIST.html">Multi-class classification: MNIST</a></li>
+              <li><a href="@Root/MultiClass_MNIST.html">Multi-class classification: MNIST</a></li>*@
 
               <li><a href="@Root/Regression_PricePrediction.html">Regression: price prediction</a></li>
-              <li><a href="@Root/Regression_SalesForecast.html">Regression: sales forecast</a></li>
-              <li><a href="@Root/Regression_DemandPrediction.html">Regression: demand prediction</a></li>
+              @*<li><a href="@Root/Regression_SalesForecast.html">Regression: sales forecast</a></li>
+              <li><a href="@Root/Regression_DemandPrediction.html">Regression: demand prediction</a></li>*@
 
-              <li><a href="@Root/Recommendation_Movie.html">Recommendation: movie</a></li>
-              <li><a href="@Root/Recommendation_Product.html">Recommendation: product</a></li>
+              @*<li><a href="@Root/Recommendation_Movie.html">Recommendation: movie</a></li>
+              <li><a href="@Root/Recommendation_Product.html">Recommendation: product</a></li>*@
 
               <li><a href="@Root/Clustering_IrisFlowers.html">Clustering: iris flowers</a></li>
-              <li><a href="@Root/Clustering_CustomerSegmentation.html">Clustering: customer segmentation</a></li>
+              @*<li><a href="@Root/Clustering_CustomerSegmentation.html">Clustering: customer segmentation</a></li>*@
 
 
               <li class="nav-header">Documentation</li>
