Update FSharpML core to ML.Net version 1.4.0

--- a/docsrc/tools/templates/template.cshtml
+++ b/docsrc/tools/templates/template.cshtml
@@ -42,23 +42,44 @@
                     <li><a href="@Root/index.html">Home page</a></li>
                     <li class="divider"></li>
                     <li><a href="@Root/release-notes.html">Release Notes</a></li>
+
+                    <li class="nav-header">Samples</li>
+                    <li><a href="@Root/BinaryClass_SentimentAnalysis.html">Binary classification: sentiment analysis</a></li>
+                    <li><a href="@Root/BinaryClass_SpamDetection.html">Binary classification: spam detection</a></li>
+                    @*<li><a href="@Root/BinaryClass_FraudDetection.html">Binary classification: fraud detection</a></li>*@
+
+                    @*<li><a href="@Root/MultiClass_Issues.html">Multi-class classification: issues</a></li>
+                    <li><a href="@Root/MultiClass_IrisFlowers.html">Multi-class classification: iris flowers</a></li>
+                    <li><a href="@Root/MultiClass_HeartDisease.html">Multi-class classification: heart disease</a></li>
+                    <li><a href="@Root/MultiClass_MNIST.html">Multi-class classification: MNIST</a></li>*@
+
+                    <li><a href="@Root/Regression_PricePrediction.html">Regression: price prediction</a></li>
+                    @*<li><a href="@Root/Regression_SalesForecast.html">Regression: sales forecast</a></li>
+                        <li><a href="@Root/Regression_DemandPrediction.html">Regression: demand prediction</a></li>*@
+
+                    @*<li><a href="@Root/Recommendation_Movie.html">Recommendation: movie</a></li>
+                        <li><a href="@Root/Recommendation_Product.html">Recommendation: product</a></li>*@
+
+                    <li><a href="@Root/Clustering_IrisFlowers.html">Clustering: iris flowers</a></li>
+                    @*<li><a href="@Root/Clustering_CustomerSegmentation.html">Clustering: customer segmentation</a></li>*@
+
                     <li class="nav-header">Documentation</li>
                     <li><a href="@Root/reference/index.html">API Reference</a></li>
 
 
                     @*<li class="nav-header">Statistics</li>
-                        <li><a href="@Root/StatisticalMeasures.html">Common measures</a></li>
-                        <li><a href="@Root/Distributions.html">Distributions</a></li>
-                        <li><a href="@Root/StatisticalTests.html">Statistical Tests</a></li>
-                        <li class="nav-header">Charting & Visualization</li>
-                        <li><a href="@Root/Plotly.html">Charting with Plotly</a></li>
-                        <li class="nav-header">Documentation</li>
-                        <li><a href="@Root/reference/index.html">API Reference</a></li>
-                        <li class="nav-header">Our other projects</li>
-                        <li><a href="https://github.com/CSBiology/FSharp.Stats">FSharp.Stats</a></li>
-                        <li><a href="https://github.com/CSBiology/FSharp.Care">FSharp.Care</a></li>
-                        <li><a href="https://github.com/CSBiology/FSharp.FGL">FSharp.FGL</a></li>
-                        <li><a href="https://github.com/CSBiology/BioFSharp.Mz">BioFSharp.Mz</a></li>*@
+        <li><a href="@Root/StatisticalMeasures.html">Common measures</a></li>
+        <li><a href="@Root/Distributions.html">Distributions</a></li>
+        <li><a href="@Root/StatisticalTests.html">Statistical Tests</a></li>
+        <li class="nav-header">Charting & Visualization</li>
+        <li><a href="@Root/Plotly.html">Charting with Plotly</a></li>
+        <li class="nav-header">Documentation</li>
+        <li><a href="@Root/reference/index.html">API Reference</a></li>
+        <li class="nav-header">Our other projects</li>
+        <li><a href="https://github.com/CSBiology/FSharp.Stats">FSharp.Stats</a></li>
+        <li><a href="https://github.com/CSBiology/FSharp.Care">FSharp.Care</a></li>
+        <li><a href="https://github.com/CSBiology/FSharp.FGL">FSharp.FGL</a></li>
+        <li><a href="https://github.com/CSBiology/BioFSharp.Mz">BioFSharp.Mz</a></li>*@
                 </ul>
             </div>
         </div>
